Closed
Bug 1867090
Opened 1 years ago
Closed 1 years ago
Don't deliver resize loop error notification for internal Last Remembered Size observer.
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
122 Branch
Tracking | Status | |
---|---|---|
firefox122 | --- | fixed |
People
(Reporter: fredw, Assigned: fredw)
References
Details
Attachments
(1 file)
No description provided.
Assignee | ||
Comment 1•1 years ago
|
||
This fixes regression from bug 1866894.
Also revert some code used to worked these undesired errors.
Updated•1 years ago
|
Assignee: nobody → fwang
Status: NEW → ASSIGNED
Pushed by fred.wang@free.fr:
https://hg.mozilla.org/integration/autoland/rev/822c2fb25769
Don't deliver resize loop error notification for internal Last Remembered Size observer. r=emilio
Comment 3•1 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 1 years ago
status-firefox122:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•