Bug 1867090 - Don't deliver resize loop error notification for internal Last Remembered Size observer. r=emilio

This fixes regression from bug 1866894.
Also revert some code used to worked these undesired errors.

Differential Revision: https://phabricator.services.mozilla.com/D194876